--- a/index.html
+++ b/index.html
@@ -2071,7 +2071,14 @@
                 <div class="collapsible-content">
                     <div class="collapsible-content-inner">
                         <form id="add-trade-form">
-                            <div><label for="trade-symbol">Symbol:</label><select id="trade-symbol"><option value="BTC/USDT">BTC/USDT</option><option value="ETH/USDT">ETH/USDT</option></select></div>
+                           <div>
+    <label for="trade-symbol">Symbol:</label>
+    <input type="text" id="trade-symbol" list="symbol-list" placeholder="Type or select a symbol">
+    <datalist id="symbol-list">
+        <option value="BTC/USDT">
+        <option value="ETH/USDT">
+    </datalist>
+</div>
                             <div><label for="trade-type">Trade Type:</label><select id="trade-type"><option value="Long">Long</option><option value="Short">Short</option></select></div>
                             <div><label for="entry-price">Entry Price:</label><input type="number" id="entry-price" step="any" required></div>
                             <div><label for="stop-loss">Stop Loss:</label><input type="number" id="stop-loss" step="any" required></div>
