--- a/index.html
+++ b/index.html
@@ -2250,6 +2250,7 @@
                 <div><label for="sr-symbol">Symbol:</label><select id="sr-symbol"><option value="BTC/USDT">BTC/USDT</option><option value="ETH/USDT">ETH/USDT</option></select></div>
                 <div>
                     <label for="sr-lookback">Lookback:</label>
+                                       <label for="sr-lookback">Lookback:</label>
                     <select id="sr-lookback">
                         <option value="60d">60 Days</option><option value="30d">30 Days</option><option value="21d">21 Days</option><option value="14d">14 Days</option><option value="7d">7 Days</option><option value="3d">3 Days</option><option value="2d">2 Days</option>
                     </select>
@@ -2314,7 +2315,11 @@
                 </div>
                 <div>
                     <label for="vp-lookback">Lookback:</label>
+                                      <label for="vp-lookback">Lookback:</label>
                     <select id="vp-lookback">
+                        <option value="270d">270 Days</option>
+                        <option value="180d">180 Days</option>
+                        <option value="120d">120 Days</option>
                         <option value="60d">60 Days</option>
                         <option value="30d">30 Days</option>
                         <option value="21d">21 Days</option>
