--- a/index.html
+++ b/index.html
@@ -2251,8 +2251,18 @@
                 <div>
                     <label for="sr-lookback">Lookback:</label>
                                        <label for="sr-lookback">Lookback:</label>
+                        <label for="sr-lookback">Lookback:</label>
                     <select id="sr-lookback">
-                        <option value="60d">60 Days</option><option value="30d">30 Days</option><option value="21d">21 Days</option><option value="14d">14 Days</option><option value="7d">7 Days</option><option value="3d">3 Days</option><option value="2d">2 Days</option>
+                        <option value="270d">270 Days</option>
+                        <option value="180d">180 Days</option>
+                        <option value="120d">120 Days</option>
+                        <option value="60d">60 Days</option>
+                        <option value="30d">30 Days</option>
+                        <option value="21d">21 Days</option>
+                        <option value="14d">14 Days</option>
+                        <option value="7d">7 Days</option>
+                        <option value="3d">3 Days</option>
+                        <option value="2d">2 Days</option>
                     </select>
                 </div>
             </div>
