--- a/index.html
+++ b/index.html
@@ -2547,16 +2547,21 @@
     document.addEventListener('DOMContentLoaded', () => {
 
         // --- CONFIGURATION ---
-        const CONFIG = {
-            FIREBASE: {
+       // --- CONFIGURATION ---
+const CONFIG = {
+    FIREBASE: {
         apiKey: "AIzaSyCQ4vHqGiv_yRkA0zZaaOU24gxhqBkxnv4",
         authDomain: "journal-a003f.firebaseapp.com",
         databaseURL: "https://journal-a003f-default-rtdb.asia-southeast1.firebasedatabase.app",
         projectId: "journal-a003f",
-        storageBucket: "journal-a003f.appspot.com", // <--- THIS LINE IS WRONG
+        // --- THIS IS THE CORRECTED LINE ---
+        storageBucket: "journal-a003f.firebasestorage.app", 
+        // --- END OF CORRECTION ---
         messagingSenderId: "1038636626553",
         appId: "1:1038636626553:web:7a91c321e39c146bdc9aa8"
     },
+    // ... rest of config
+};
             DB_PATHS: { TRADES: 'trades', COMPLETED_TRADES: 'completed_trades', BANK: 'bank', JOURNAL_TEXT: 'journal_text', JOURNAL_IMAGES: 'journal_images', IMAGE_LIBRARY: 'image_library', SETUPS_IMAGES: 'setups_images', CHART_LIBRARY_2: 'chart_library_2', JOURNAL_FAVOURITES: 'journal_favourites', SETUPS_1: 'current_setups_1', SETUPS_2: 'current_setups_2', PERSISTENT_NOTES: 'persistent_notes', TRACKER_SCRATCHPAD: 'tracker_scratchpad', SENTIMENT_RECEIPTS: 'sentiment_receipts', LEVEL_NOTES: 'level_notes', GENERAL_NOTES: 'general_notes' },
             TRADE_SETTINGS: { FEE_RATE: 0.00075, STARTING_BALANCE: 3881, },
             EMA_ANALYSIS: { SYMBOLS: ['BTC-USDT', 'ETH-USDT'], TIMEFRAMES: ['1hour', '2hour', '4hour', 'daily'], PERIODS: [13, 49, 100, 200, 500, 1000], SHORT_NAMES: {'15min': '15m', '30min': '30m', '1hour': '1H', '2hour': '2H', '4hour': '4H', 'daily': '1D', 'weekly': '1W', 'monthly': '1M'} }
