--- a/index.html
+++ b/index.html
@@ -3252,7 +3252,7 @@ htfForSummary.forEach(tf => {
         }));
     }
 });
-                const supportsHtfAll = levelsHtf.filter(l => l.isSupport).sort((a, b) => b.value - a.value);
+                const supportsHtfAll = levelsHtf.filter(l => l.isSupport).sort((a, b) => a.value - b.value);
                 const resistancesHtfAll = levelsHtf.filter(l => !l.isSupport).sort((a, b) => a.value - b.value);
                 let tableRowsHtml = '';
                 supportsHtfAll.forEach(supHtf => { tableRowsHtml += `<tr><td style="color: var(--text-color);">${supHtf.label}</td><td style="color: var(--green-text);">${Math.round(supHtf.value).toLocaleString()}</td></tr>`; });
