--- a/index.html
+++ b/index.html
@@ -2073,7 +2073,12 @@
                                 <div id="setups-upload-progress" style="margin-top: 10px; font-style: italic; color: var(--link-color);"></div>
                             </div>
                             <div id="setups-image-container"></div>
-                            <button id="toggle-old-setups-images" class="toggle-history-btn">Show All</button>
+                            <button id="toggle-all-setups-images" class="toggle-history-btn">Show All</button>
+                            <div id="setups-images-pagination-controls" class="pagination-controls" style="display: none;">
+                                <button id="setups-images-prev-page" class="pagination-btn">&lt; Prev</button>
+                                <span id="setups-images-page-info"></span>
+                                <button id="setups-images-next-page" class="pagination-btn">Next &gt;</button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -2685,6 +2690,7 @@ const CONFIG = {
         const STATE = {
             isMasterUser: false, masterPassword: null, viewerId: null, usdToAudRate: 1.53, marketOpens: {}, journalText: {}, journalImages: {}, chartLibrary2Data: {}, currentCl2Folder: null, emaData: {}, srData: {}, vpData: {}, favouriteEntries: {}, persistentNotes: '', trackerScratchpadText: '', setupsData1: {}, setupsData2: {}, generalNotes: {}, selectedDate: null, centerDate: null, journalSaveTimer: null, notesSaveTimer: null, trackerSaveTimer: null, setups1NotesTimer: null, setups2NotesTimer: null, isMerging: false, mergeBaseTradeId: null, modalImageGallery: [], modalImageIndex: -1, imageUploadContext: { id: null, type: null }, levelNotes: {}, levelNotesSaveTimer: null, allSentimentReceipts: {}, sentimentShowAll: false, sentimentCurrentPage: 1, sentimentItemsPerPage: 15,
             allCompletedTrades: {}, completedTradesShowAll: false, completedTradesCurrentPage: 1, completedTradesItemsPerPage: 5,
+            allSetupsImages: {}, setupsImagesShowAll: false, setupsImagesCurrentPage: 1, setupsImagesItemsPerPage: 12,
             chartInstances: {}
         };
 
@@ -2873,13 +2879,7 @@ const CONFIG = {
                 document.getElementById('last-updated-charts').innerText = 'Error loading chart data.';
             }
         }
-        function updateToggleButtonsVisibility() {
-            const setupsContainer = document.getElementById('setups-image-container');
-            const setupsButton = document.getElementById('toggle-old-setups-images');
-             if (setupsContainer && setupsButton) {
-                setupsButton.style.display = setupsContainer.querySelector('.historical-entry') ? 'block' : 'none';
-            }
-        }
+
 
         function toggleHistoricalRows(tbodyId, button) {
             const tbody = document.getElementById(tbodyId);
@@ -2893,17 +2893,7 @@ const CONFIG = {
             adjustCollapsibleSize(button);
         }
         
-        function toggleHistoricalImages(containerId, button) {
-            const container = document.getElementById(containerId);
-            if (!container) return;
-            const historicalImages = container.querySelectorAll('.historical-entry');
-            if (historicalImages.length === 0) return;
-            const isCurrentlyHidden = historicalImages[0].style.display === 'none';
-            const displayStyle = isCurrentlyHidden ? 'flex' : 'none';
-            historicalImages.forEach(img => { img.style.display = displayStyle; });
-            button.textContent = isCurrentlyHidden ? 'Hide Older' : 'Show All';
-            adjustCollapsibleSize(button);
-        }
+
 
         function renderNotes(notesData) {
             const container = DOM.notesContainer;
@@ -3122,23 +3112,60 @@ const CONFIG = {
             if (!containerElement) return;
             const perthTodayStr = getPerthDateString();
             const masterButtonsHtml = (id, fileName) => (STATE.isMasterUser) ? `<button class="delete-library-image" title="Delete Image" data-id="${id}" data-filename="${fileName}" data-library-type="${libraryType}"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64s14.3 32 32 32h384c17.7 0 32-14.3 32-32s-14.3-32-32-32h-96l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32l21.2 339c1.6 25.3 22.6 45 47.9 45h245.8c25.3 0 46.3-19.7 47.9-45L416 128z"/></svg></button><button class="edit-caption-btn" title="Edit Caption" data-id="${id}" data-library-type="${libraryType}"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z"/></svg></button>` : '';
-            const imagesHtml = Object.keys(images).sort((a, b) => images[b].timestamp - images[a].timestamp).map(id => {
+
+            const allImageIds = Object.keys(images).sort((a, b) => images[b].timestamp - images[a].timestamp);
+            let imagesHtml = '';
+
+            const createImageHtml = (id, extraClasses = '', extraStyle = '') => {
                 const imgData = images[id]; if (!imgData?.url) return '';
                 const caption = imgData.caption || (imgData.timestamp ? new Date(imgData.timestamp).toLocaleString() : ' ');
-                let wrapperClasses = 'library-image-wrapper';
-                let wrapperStyle = '';
-                if (libraryType === 'setups_images' && imgData.timestamp) {
-                    const imagePerthDateStr = getPerthDateString(new Date(imgData.timestamp));
-                    const isHistorical = imagePerthDateStr !== perthTodayStr;
-                    if (isHistorical) { wrapperClasses += ' historical-entry'; wrapperStyle = 'style="display: none;"'; }
+                return `<div class="library-image-wrapper ${extraClasses}" ${extraStyle}>${masterButtonsHtml(id, imgData.fileName)}<img src="${imgData.url}" alt="${libraryType} Image" data-full-src="${imgData.url}" data-caption="${caption}"><div class="library-image-caption" title="${caption}">${caption}</div></div>`;
+            };
+
+            if (libraryType === 'setups_images') {
+                const paginationControls = document.getElementById('setups-images-pagination-controls');
+                const showAllButton = document.getElementById('toggle-all-setups-images');
+
+                if (STATE.setupsImagesShowAll) {
+                    const totalItems = allImageIds.length;
+                    const totalPages = Math.ceil(totalItems / STATE.setupsImagesItemsPerPage);
+                    if (STATE.setupsImagesCurrentPage > totalPages && totalPages > 0) STATE.setupsImagesCurrentPage = totalPages;
+                    if (STATE.setupsImagesCurrentPage < 1) STATE.setupsImagesCurrentPage = 1;
+
+                    const startIndex = (STATE.setupsImagesCurrentPage - 1) * STATE.setupsImagesItemsPerPage;
+                    const endIndex = startIndex + STATE.setupsImagesItemsPerPage;
+                    imagesHtml = allImageIds.slice(startIndex, endIndex).map(id => createImageHtml(id)).join('');
+
+                    showAllButton.style.display = 'none';
+                    if (totalPages > 1) {
+                        paginationControls.style.display = 'flex';
+                        document.getElementById('setups-images-page-info').textContent = `Page ${STATE.setupsImagesCurrentPage} of ${totalPages}`;
+                        document.getElementById('setups-images-prev-page').disabled = (STATE.setupsImagesCurrentPage === 1);
+                        document.getElementById('setups-images-next-page').disabled = (STATE.setupsImagesCurrentPage === totalPages);
+                    } else {
+                        paginationControls.style.display = 'none';
+                    }
+                } else {
+                    let hasHistorical = false;
+                    imagesHtml = allImageIds.map(id => {
+                        const imgData = images[id];
+                        const imagePerthDateStr = imgData.timestamp ? getPerthDateString(new Date(imgData.timestamp)) : '';
+                        const isHistorical = imagePerthDateStr !== perthTodayStr;
+                        if (isHistorical) hasHistorical = true;
+                        return createImageHtml(id, isHistorical ? 'historical-entry' : '', isHistorical ? 'style="display: none;"' : '');
+                    }).join('');
+
+                    paginationControls.style.display = 'none';
+                    showAllButton.style.display = hasHistorical ? 'block' : 'none';
                 }
-                return `<div class="${wrapperClasses}" ${wrapperStyle}>${masterButtonsHtml(id, imgData.fileName)}<img src="${imgData.url}" alt="${libraryType} Image" data-full-src="${imgData.url}" data-caption="${caption}"><div class="library-image-caption" title="${caption}">${caption}</div></div>`;
-            }).join('');
+            } else {
+                // Original logic for any other image library (e.g., misc)
+                imagesHtml = allImageIds.map(id => createImageHtml(id)).join('');
+            }
+            
             containerElement.innerHTML = imagesHtml;
-            if (libraryType === 'setups_images') { updateToggleButtonsVisibility(); }
             adjustCollapsibleSize(containerElement);
         }
-
         function renderChartLibrary2Folders() {
             if (!DOM.chartLibrary2Container) return;
             const foldersHtml = CL2_FOLDERS.map(folder => { const imageCount = STATE.chartLibrary2Data[folder] ? Object.keys(STATE.chartLibrary2Data[folder]).length : 0; return `<div class="cl2-folder-card" data-folder="${folder}"><div class="cl2-folder-icon">📁</div><h4>${folder}</h4><div class="cl2-folder-count">${imageCount} image${imageCount !== 1 ? 's' : ''}</div></div>`; }).join('');
@@ -3780,8 +3807,21 @@ htfForSummary.forEach(tf => {
                 } else if (e.target.id === 'completed-trades-next-page') {
                     const totalPages = Math.ceil(Object.keys(STATE.allCompletedTrades).length / STATE.completedTradesItemsPerPage);
                     if (STATE.completedTradesCurrentPage < totalPages) { STATE.completedTradesCurrentPage++; renderCompletedTable(STATE.allCompletedTrades); }
-                } else if (e.target.id === 'toggle-old-setups-images') {
-                    toggleHistoricalImages('setups-image-container', e.target);
+                } else if (e.target.id === 'toggle-all-setups-images') {
+                    STATE.setupsImagesShowAll = true;
+                    STATE.setupsImagesCurrentPage = 1;
+                    renderGenericImageLibrary(STATE.allSetupsImages, DOM.setupsImageContainer, 'setups_images');
+                } else if (e.target.id === 'setups-images-prev-page') {
+                    if (STATE.setupsImagesCurrentPage > 1) { 
+                        STATE.setupsImagesCurrentPage--; 
+                        renderGenericImageLibrary(STATE.allSetupsImages, DOM.setupsImageContainer, 'setups_images');
+                    }
+                } else if (e.target.id === 'setups-images-next-page') {
+                    const totalPages = Math.ceil(Object.keys(STATE.allSetupsImages).length / STATE.setupsImagesItemsPerPage);
+                    if (STATE.setupsImagesCurrentPage < totalPages) { 
+                        STATE.setupsImagesCurrentPage++;
+                        renderGenericImageLibrary(STATE.allSetupsImages, DOM.setupsImageContainer, 'setups_images');
+                    }
                 }
             });
 
@@ -4394,7 +4434,10 @@ function handleChartLibrary2Click(e) {
             dbRefs.journalText.on('value', (s) => { STATE.journalText = s.val() || {}; if (DOM.journalTab.classList.contains('active')) updateJournalView(); });
             dbRefs.journalImages.on('value', (s) => { STATE.journalImages = s.val() || {}; if (DOM.journalTab.classList.contains('active')) updateJournalView(); });
             dbRefs.imageLibrary.on('value', (s) => renderGenericImageLibrary(s.val(), DOM.imageLibraryContainer, 'image_library'));
-            dbRefs.setupsImages.on('value', (s) => renderGenericImageLibrary(s.val(), DOM.setupsImageContainer, 'setups_images'));
+            dbRefs.setupsImages.on('value', (s) => {
+                STATE.allSetupsImages = s.val() || {};
+                renderGenericImageLibrary(STATE.allSetupsImages, DOM.setupsImageContainer, 'setups_images');
+            });
             dbRefs.chartLibrary2.on('value', s => { STATE.chartLibrary2Data = s.val() || {}; if (STATE.currentCl2Folder) renderFolderContents(STATE.currentCl2Folder); else renderChartLibrary2Folders(); renderChartLibrary2Preview(); });
             dbRefs.favourites.on('value', (s) => { STATE.favouriteEntries = s.val() || {}; if (DOM.journalTab.classList.contains('active')) updateJournalView(); });
             dbRefs.setups1.on('value', (s) => { STATE.setupsData1 = s.val() || {}; renderSetupsTable(null, STATE.setupsData1, 'primary-setups-notes'); });
