--- a/index.html
+++ b/index.html
@@ -4017,7 +4017,8 @@ htfForSummary.forEach(tf => {
                         renderGenericImageLibrary(STATE.allSetupsImages, DOM.setupsImageContainer, 'setups_images');
                     }
                 } else if (e.target.id === 'setups-images-next-page') {
-                    const totalPages = Math.ceil(Object.keys(STATE.allSetupsImages).length / STATE.setupsItemsPerPage);
+                    // Change "setupsItemsPerPage" to "setupsImagesItemsPerPage"
+const totalPages = Math.ceil(Object.keys(STATE.allSetupsImages).length / STATE.setupsImagesItemsPerPage);
                     if (STATE.setupsImagesCurrentPage < totalPages) { 
                         STATE.setupsImagesCurrentPage++;
                         renderGenericImageLibrary(STATE.allSetupsImages, DOM.setupsImageContainer, 'setups_images');
