--- a/index.html
+++ b/index.html
@@ -4798,9 +4798,9 @@ function handleChartLibrary2Click(e) {
     });
 
 
-        // --- ONE-TIME UTILITY TO FIX EXISTING TRADES ---
+   // --- ONE-TIME UTILITY TO FIX EXISTING TRADES ---
         // You can run this function from the browser's developer console ONCE.
-        async function recalculateAllAverageEntries() {
+        window.recalculateAllAverageEntries = async function() {
             console.log("--- Starting Recalculation of Average Entries ---");
 
             const feeRate = CONFIG.TRADE_SETTINGS.FEE_RATE;
